image overflow resolved

--- a/src/Components/Carousel/Carousel.css
+++ b/src/Components/Carousel/Carousel.css
@@ -8,4 +8,6 @@
     border-radius: 10px;
     margin-bottom: 5px;
     box-shadow: 0px 0px 5px black;
+    height: 150px;
+    width: 100px;
   }
